--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.android.support:design:24.2.0'
     compile 'com.android.support:cardview-v7:24.2.0'
     testCompile 'junit:junit:4.12'
+    testCompile "org.mockito:mockito-core:1.8.0-rc2"
+    testCompile "org.robolectric:robolectric:3.1.2"
 }
