--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
 
     def someVariable = '"some value"'
     def someVariableProd = '"some value production"'
+
     defaultConfig {
         applicationId "comalexpolyanskyi.github.hwflagslanuchmode"
         minSdkVersion 17
@@ -32,33 +33,45 @@ android {
         }
 
         ru {
-            applicationId "com.example.mikhail_sianko.myapplication.ru"+versionCode;
+            applicationId "comalexpolyanskyi.github.hwflagslanuchmode.ru";
             dimension "language"
         }
 
         en {
-            applicationId "com.example.mikhail_sianko.myapplication.en"+versionCode;
+            applicationId "comalexpolyanskyi.github.hwflagslanuchmode.en";
             dimension "language"
         }
     }
 
     buildTypes {
+        debug {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            applicationVariants.all { variant ->
+                variant.outputs.each { output ->
+                    output.outputFile = new File(
+                            output.outputFile.parent,
+                            output.outputFile.name.replace(".apk", "-${variant.versionName}.apk"))
+
+                }
+            }
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-}
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-    compile 'com.android.support:cardview-v7:24.2.0'
-    testCompile 'junit:junit:4.12'
-    testCompile "org.mockito:mockito-core:1.8.0-rc2"
-    testCompile "org.robolectric:robolectric:3.1.2"
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+            exclude group: 'com.android.support', module: 'support-annotations'
+        })
+        compile 'com.android.support:appcompat-v7:24.2.0'
+        compile 'com.android.support:design:24.2.0'
+        compile 'com.android.support:cardview-v7:24.2.0'
+        testCompile 'junit:junit:4.12'
+        testCompile "org.mockito:mockito-core:1.8.0-rc2"
+        testCompile "org.robolectric:robolectric:3.1.2"
+    }
 }
